--- a/app/src/main/res/layout/item_progress.xml
+++ b/app/src/main/res/layout/item_progress.xml
@@ -4,6 +4,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:visibility="visible"
     android:visibility="gone">
 
         <ProgressBar
